# openw3d-utils

./: .gitmodules  CMakeLists.txt  MIXFileFormat.md  main.cpp  mixfile.cpp  mixfile.h  mixfiledisplay.cpp  mixfiledisplay.h  mixfiledisplay.ui  mixfilemodel.cpp  mixfilemodel.h  mixviewer_main.cpp  rmmixviewer.cpp  rmmixviewer.h  rmmixviewer.ui  textviewdisplay.cpp  textviewdisplay.h  textviewdisplay.ui  vcpkg.json
.github/workflows/: build-windows.yml
